{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 2194,
  "lineage": "76eac23f-83e8-876e-30d0-4e4eba7ce555",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:634867383669:loadbalancer/app/example-asg/c35d6c944372807c",
            "arn_suffix": "app/example-asg/c35d6c944372807c",
            "dns_name": "example-asg-1609439290.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:634867383669:loadbalancer/app/example-asg/c35d6c944372807c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example-asg",
            "security_groups": [
              "sg-0b21efcde0562431c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08a862cce36cf0962"
              },
              {
                "subnet_id": "subnet-0ce9eb0d13acbfd0d"
              }
            ],
            "subnets": [
              "subnet-08a862cce36cf0962",
              "subnet-0ce9eb0d13acbfd0d"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "example-asg",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-asg",
              "Owner": "user"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0ae8a0707d3e492a4",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:634867383669:listener/app/example-asg/c35d6c944372807c/e075a3e8206b0600",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:634867383669:targetgroup/example-asg/d1d10bcd9ab9e926",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:634867383669:listener/app/example-asg/c35d6c944372807c/e075a3e8206b0600",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:634867383669:loadbalancer/app/example-asg/c35d6c944372807c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Owner": "user"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:634867383669:targetgroup/example-asg/d1d10bcd9ab9e926",
            "arn_suffix": "targetgroup/example-asg/d1d10bcd9ab9e926",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:634867383669:targetgroup/example-asg/d1d10bcd9ab9e926",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "example-asg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "example-asg",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-asg",
              "Owner": "user"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0ae8a0707d3e492a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:634867383669:security-group/sg-0b21efcde0562431c",
            "description": "A security group for alb",
            "egress": [],
            "id": "sg-0b21efcde0562431c",
            "ingress": [],
            "name": "alb-sg-20211006172036258700000001",
            "name_prefix": "alb-sg-",
            "owner_id": "634867383669",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "alb-sg",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "alb-sg",
              "Owner": "user"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae8a0707d3e492a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3294856317",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b21efcde0562431c",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 80,
            "id": "sgrule-2873104645",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b21efcde0562431c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 443,
            "id": "sgrule-3208615223",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b21efcde0562431c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend_asg_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:634867383669:security-group/sg-05040bc0d9f69b424",
            "description": "A security group backend layer",
            "egress": [],
            "id": "sg-05040bc0d9f69b424",
            "ingress": [],
            "name": "backend-asg-sg-20211006172038264600000003",
            "name_prefix": "backend-asg-sg-",
            "owner_id": "634867383669",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "backend-asg-sg",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "backend-asg-sg",
              "Owner": "user"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae8a0707d3e492a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.backend_asg_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": 3306,
            "id": "sgrule-1341848757",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05040bc0d9f69b424",
            "self": false,
            "source_security_group_id": "sg-08afe0a1ab3ef46ba",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backend_asg_sg.aws_security_group.this",
            "module.backend_asg_sg.aws_security_group.this_name_prefix",
            "module.frontend_asg_sg.aws_security_group.this",
            "module.frontend_asg_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.backend_asg_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3238039670",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05040bc0d9f69b424",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backend_asg_sg.aws_security_group.this",
            "module.backend_asg_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_asg_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:634867383669:security-group/sg-08afe0a1ab3ef46ba",
            "description": "A security group frontend layer",
            "egress": [],
            "id": "sg-08afe0a1ab3ef46ba",
            "ingress": [],
            "name": "frontend-asg-sg-20211006172037819200000002",
            "name_prefix": "frontend-asg-sg-",
            "owner_id": "634867383669",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "frontend-asg-sg",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "frontend-asg-sg",
              "Owner": "user"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae8a0707d3e492a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.frontend_asg_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": 80,
            "id": "sgrule-2098464619",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08afe0a1ab3ef46ba",
            "self": false,
            "source_security_group_id": "sg-0b21efcde0562431c",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.frontend_asg_sg.aws_security_group.this",
            "module.frontend_asg_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": 443,
            "id": "sgrule-1454257192",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08afe0a1ab3ef46ba",
            "self": false,
            "source_security_group_id": "sg-0b21efcde0562431c",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.frontend_asg_sg.aws_security_group.this",
            "module.frontend_asg_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_asg_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2065409441",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08afe0a1ab3ef46ba",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.frontend_asg_sg.aws_security_group.this",
            "module.frontend_asg_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eigw-050bc31402521c4b0",
            "tags": {
              "Environment": "dev",
              "Name": "rd-vpc",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rd-vpc",
              "Owner": "user"
            },
            "vpc_id": "vpc-0ae8a0707d3e492a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-04e4f25d6470144a2",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-23-11-71.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.11.71",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "rd-vpc-us-east-2a",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rd-vpc-us-east-2a",
              "Owner": "user"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-04f3f55eab9e28dce",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-13-116-239.us-east-2.compute.amazonaws.com",
            "public_ip": "3.13.116.239",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "rd-vpc-us-east-2b",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rd-vpc-us-east-2b",
              "Owner": "user"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:634867383669:internet-gateway/igw-0137c5c856c31c9f6",
            "id": "igw-0137c5c856c31c9f6",
            "owner_id": "634867383669",
            "tags": {
              "Environment": "dev",
              "Name": "rd-vpc",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rd-vpc",
              "Owner": "user"
            },
            "vpc_id": "vpc-0ae8a0707d3e492a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04e4f25d6470144a2",
            "connectivity_type": "public",
            "id": "nat-05a92013392e7073b",
            "network_interface_id": "eni-0e8df0afc819b7d73",
            "private_ip": "192.168.1.106",
            "public_ip": "3.23.11.71",
            "subnet_id": "subnet-0ce9eb0d13acbfd0d",
            "tags": {
              "Environment": "dev",
              "Name": "rd-vpc-us-east-2a",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rd-vpc-us-east-2a",
              "Owner": "user"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f3f55eab9e28dce",
            "connectivity_type": "public",
            "id": "nat-050ee914e6c4891b4",
            "network_interface_id": "eni-0c42528a727fe57d0",
            "private_ip": "192.168.8.115",
            "public_ip": "3.13.116.239",
            "subnet_id": "subnet-08a862cce36cf0962",
            "tags": {
              "Environment": "dev",
              "Name": "rd-vpc-us-east-2b",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rd-vpc-us-east-2b",
              "Owner": "user"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-050bc31402521c4b0",
            "gateway_id": "",
            "id": "r-rtb-030758689a37224262750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-030758689a3722426",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-050bc31402521c4b0",
            "gateway_id": "",
            "id": "r-rtb-012a1e4548644e5d62750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-012a1e4548644e5d6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-030758689a37224261080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05a92013392e7073b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-030758689a3722426",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-012a1e4548644e5d61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-050ee914e6c4891b4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-012a1e4548644e5d6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0137c5c856c31c9f6",
            "id": "r-rtb-0cf9060bf88cea0701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cf9060bf88cea070",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0137c5c856c31c9f6",
            "id": "r-rtb-0cf9060bf88cea0702750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cf9060bf88cea070",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:634867383669:route-table/rtb-06b3ca39486a3e294",
            "id": "rtb-06b3ca39486a3e294",
            "owner_id": "634867383669",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "rd-vpc-db-us-east-2a",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rd-vpc-db-us-east-2a",
              "Owner": "user"
            },
            "vpc_id": "vpc-0ae8a0707d3e492a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:634867383669:route-table/rtb-07e5198898ceb9396",
            "id": "rtb-07e5198898ceb9396",
            "owner_id": "634867383669",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "rd-vpc-db-us-east-2b",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rd-vpc-db-us-east-2b",
              "Owner": "user"
            },
            "vpc_id": "vpc-0ae8a0707d3e492a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:634867383669:route-table/rtb-030758689a3722426",
            "id": "rtb-030758689a3722426",
            "owner_id": "634867383669",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "rd-vpc-private-us-east-2a",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rd-vpc-private-us-east-2a",
              "Owner": "user"
            },
            "vpc_id": "vpc-0ae8a0707d3e492a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:634867383669:route-table/rtb-012a1e4548644e5d6",
            "id": "rtb-012a1e4548644e5d6",
            "owner_id": "634867383669",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "rd-vpc-private-us-east-2b",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rd-vpc-private-us-east-2b",
              "Owner": "user"
            },
            "vpc_id": "vpc-0ae8a0707d3e492a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:634867383669:route-table/rtb-0cf9060bf88cea070",
            "id": "rtb-0cf9060bf88cea070",
            "owner_id": "634867383669",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "rd-vpc-public",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rd-vpc-public",
              "Owner": "user"
            },
            "vpc_id": "vpc-0ae8a0707d3e492a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0562f5ce71420450a",
            "route_table_id": "rtb-06b3ca39486a3e294",
            "subnet_id": "subnet-03f5a8dffc15e9233"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002d34c6abfeb2833",
            "route_table_id": "rtb-07e5198898ceb9396",
            "subnet_id": "subnet-022bbce3f00d1f82c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0087b22d8ec9f7c96",
            "route_table_id": "rtb-030758689a3722426",
            "subnet_id": "subnet-0c383fc8f9cba5754"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001640b1e8994618f",
            "route_table_id": "rtb-012a1e4548644e5d6",
            "subnet_id": "subnet-09a8ca289f90d4852"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e93799bd121d0b7",
            "route_table_id": "rtb-0cf9060bf88cea070",
            "subnet_id": "subnet-0ce9eb0d13acbfd0d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059d8b447cbe1e30c",
            "route_table_id": "rtb-0cf9060bf88cea070",
            "subnet_id": "subnet-08a862cce36cf0962"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:634867383669:subnet/subnet-03f5a8dffc15e9233",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.32.0/24",
            "id": "subnet-03f5a8dffc15e9233",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "634867383669",
            "tags": {
              "Environment": "dev",
              "Name": "rd-vpc-db-us-east-2a",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rd-vpc-db-us-east-2a",
              "Owner": "user"
            },
            "vpc_id": "vpc-0ae8a0707d3e492a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:634867383669:subnet/subnet-022bbce3f00d1f82c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.40.0/24",
            "id": "subnet-022bbce3f00d1f82c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "634867383669",
            "tags": {
              "Environment": "dev",
              "Name": "rd-vpc-db-us-east-2b",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rd-vpc-db-us-east-2b",
              "Owner": "user"
            },
            "vpc_id": "vpc-0ae8a0707d3e492a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:634867383669:subnet/subnet-0c383fc8f9cba5754",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.16.0/24",
            "id": "subnet-0c383fc8f9cba5754",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "634867383669",
            "tags": {
              "Environment": "dev",
              "Name": "rd-vpc-private-us-east-2a",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rd-vpc-private-us-east-2a",
              "Owner": "user"
            },
            "vpc_id": "vpc-0ae8a0707d3e492a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:634867383669:subnet/subnet-09a8ca289f90d4852",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.24.0/24",
            "id": "subnet-09a8ca289f90d4852",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "634867383669",
            "tags": {
              "Environment": "dev",
              "Name": "rd-vpc-private-us-east-2b",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rd-vpc-private-us-east-2b",
              "Owner": "user"
            },
            "vpc_id": "vpc-0ae8a0707d3e492a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:634867383669:subnet/subnet-0ce9eb0d13acbfd0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0ce9eb0d13acbfd0d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "634867383669",
            "tags": {
              "Environment": "dev",
              "Name": "rd-vpc-public-us-east-2a",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rd-vpc-public-us-east-2a",
              "Owner": "user"
            },
            "vpc_id": "vpc-0ae8a0707d3e492a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:634867383669:subnet/subnet-08a862cce36cf0962",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.8.0/24",
            "id": "subnet-08a862cce36cf0962",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "634867383669",
            "tags": {
              "Environment": "dev",
              "Name": "rd-vpc-public-us-east-2b",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rd-vpc-public-us-east-2b",
              "Owner": "user"
            },
            "vpc_id": "vpc-0ae8a0707d3e492a4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:634867383669:vpc/vpc-0ae8a0707d3e492a4",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-08a34e4155faca0c4",
            "default_route_table_id": "rtb-0406bc98b3514bc0e",
            "default_security_group_id": "sg-0470fc936a1176b9a",
            "dhcp_options_id": "dopt-cba3dda0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ae8a0707d3e492a4",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0195f1fe5563c4e3c",
            "ipv6_cidr_block": "2600:1f16:418:e00::/56",
            "main_route_table_id": "rtb-0406bc98b3514bc0e",
            "owner_id": "634867383669",
            "tags": {
              "Environment": "dev",
              "Name": "rd-vpc",
              "Owner": "user",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rd-vpc",
              "Owner": "user",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}